Native Java: hosted-JVM handler path (javac + jlink JRE + JNI shim, no GraalVM)
Replace the GraalVM native-image Java path with a hosted-JVM one so Java
exports drop the heaviest dev dependency: native-image needs an 8-16 GB /
30 s-5 min closed-world rebuild on EVERY export plus the whole GraalVM JDK.
The hosted-JVM path is javac-fast and uses the same "ship a runtime" model as
C# (CoreCLR) and Python (embeddable).

How it works (analog of C#'s CeHost.c shim):
- javac compiles the user's handlers + CeRuntime + the generated registry to
  ordinary bytecode -> jar; jlink emits a ~40 MB java.base JRE.
- ce_java_shim.c (built with the bundled clang, no MSVC) exports the flat C ABI
  and boots the shipped JVM via the JNI Invocation API (JNI_CreateJavaVM),
  RegisterNatives for the host callbacks, and resolves CeRuntime's static
  init/has/dispatch/shutdown. The CeValue* payload is passed to Java as a long;
  the C shim owns all CeValue marshalling (Java is plain JNI, no @CStruct).
- Ships the shim + ce_handlers_java.jar + jre/ beside the plugin; the shim
  self-locates libjvm + the jar. OpenJDK is GPLv2+Classpath-Exception
  (shipping permitted).

Verified end-to-end on JDK 21 (linux-x64): verify-java.mjs runs the real
javac + jar + jlink + shim build and the shared host harness boots the JVM and
dispatches a Java handler that calls back into the host (out=21, log='ran').
The exact selftest Java handler (onPanelReady + sendCC(1,26,127)) compiles.

- CeRuntime.java: rewritten for JNI (static native host calls + nP* payload
  accessors); same user-facing CeContext/CeEvent API, so handler sources are
  unchanged.
- ce_java_shim.c: JNI hosting shim (was: GraalVM isolate bridge).
- genJava.mjs: emit bytecode sources + buildPlan(tools) for javac/jar/jlink/
  shim (was: native-image recipe).
- index.mjs: Java branch builds via jdkTools() + the bundled clang, ships the
  jar + jre/ dir.
- resolveToolchain.mjs: jdkTools() resolver (javac/jar/jlink + JNI include).
- verify-java.mj